[gd_scene load_steps=18 format=3 uid="uid://08tcbi0rlywr"]

[ext_resource type="Texture2D" uid="uid://w66tk04ms77e" path="res://sprites/white.png" id="1_0wfyh"]
[ext_resource type="Texture2D" uid="uid://6uvykki1lldt" path="res://sprites/dog.png" id="1_o5qli"]
[ext_resource type="Script" uid="uid://mj5rryc047c7" path="res://scripts/player.gd" id="1_sugp2"]
[ext_resource type="Script" uid="uid://cg4h8dfhcecue" path="res://scripts/main.gd" id="1_tbgi4"]
[ext_resource type="Script" uid="uid://dd6y615h01e4g" path="res://scripts/camera_pivot.gd" id="2_tefeu"]
[ext_resource type="Script" uid="uid://bliqtt0vluaog" path="res://scripts/dog.gd" id="3_jyhfs"]
[ext_resource type="Script" uid="uid://ca44ikmyfpltn" path="res://scripts/enemy.gd" id="3_o6xl0"]
[ext_resource type="PackedScene" uid="uid://cif7oja1cf8tc" path="res://prefabs/enemy_bullet_1.tscn" id="5_eb6dy"]
[ext_resource type="Script" uid="uid://5rosrjpl8hxe" path="res://scripts/pattern_enemy_1.gd" id="5_ya4ey"]
[ext_resource type="Script" uid="uid://bvgwp2okbuhhe" path="res://scripts/bullet_emitter.gd" id="6_tipki"]
[ext_resource type="PackedScene" uid="uid://d17rg63p8cs3f" path="res://prefabs/player_bullet.tscn" id="7_85g3d"]
[ext_resource type="Script" uid="uid://d3i6m57vhi8q" path="res://scripts/pattern_player_wide.gd" id="8_choun"]
[ext_resource type="Script" uid="uid://c71naeidgp1k6" path="res://scripts/debug.gd" id="13_trceg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_choun"]
radius = 46.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jyhfs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tefeu"]
radius = 92.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tbgi4"]
radius = 38.0

[node name="main" type="Node2D"]
script = ExtResource("1_tbgi4")

[node name="camera_pivot" type="Node2D" parent="."]
script = ExtResource("2_tefeu")

[node name="enemy_pos_1" type="Node2D" parent="camera_pivot"]
position = Vector2(-85, -202)

[node name="enemy_pos_2" type="Node2D" parent="camera_pivot"]
position = Vector2(80, -202)

[node name="camera" type="Camera2D" parent="camera_pivot"]

[node name="enemy" type="Area2D" parent="."]
position = Vector2(-66, -188)
collision_layer = 2
collision_mask = 2
script = ExtResource("3_o6xl0")

[node name="bullet_emitter" type="Node2D" parent="enemy"]
script = ExtResource("6_tipki")
bullet = ExtResource("5_eb6dy")

[node name="pattern" type="Node2D" parent="enemy/bullet_emitter"]
script = ExtResource("5_ya4ey")

[node name="sprite" type="Sprite2D" parent="enemy"]
texture = ExtResource("1_0wfyh")

[node name="collider" type="CollisionShape2D" parent="enemy"]
shape = SubResource("CircleShape2D_choun")

[node name="player" type="RigidBody2D" parent="."]
position = Vector2(107, 0)
gravity_scale = 0.0
script = ExtResource("1_sugp2")

[node name="sprite" type="Sprite2D" parent="player"]
scale = Vector2(0.364118, 0.364118)
texture = ExtResource("1_0wfyh")

[node name="collider" type="CollisionShape2D" parent="player"]
shape = SubResource("CircleShape2D_jyhfs")

[node name="bullet_emitter_wide" type="Node2D" parent="player"]
script = ExtResource("6_tipki")
bullet = ExtResource("7_85g3d")

[node name="pattern" type="Node2D" parent="player/bullet_emitter_wide"]
script = ExtResource("8_choun")

[node name="dog" type="RigidBody2D" parent="."]
collision_layer = 4
collision_mask = 4
gravity_scale = 0.0
script = ExtResource("3_jyhfs")
player_layer = 1

[node name="sprite" type="Sprite2D" parent="dog"]
texture_filter = 1
texture = ExtResource("1_o5qli")

[node name="detect_player_shape" type="CollisionShape2D" parent="dog"]
shape = SubResource("CircleShape2D_tefeu")
disabled = true

[node name="stop_move_shape" type="CollisionShape2D" parent="dog"]
shape = SubResource("CircleShape2D_tbgi4")
disabled = true

[node name="bullets" type="Node2D" parent="."]

[node name="debug_ui" type="CanvasLayer" parent="."]

[node name="debug" type="Control" parent="debug_ui"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("13_trceg")
